works on fixing overflow issues with the guessList

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ html {
 body {
 	position: relative;
 	width: 98%;
-	height: 96%;
+	min-height: 600px;
 	margin: 0.8em auto;
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	background-color: #1F253D;
@@ -301,7 +301,7 @@ input:focus {
 }
 
 ul.guessBox {
-	height: 80px;
+	min-height: 80px;
 	margin: 10px auto 0;
 	background: #11a8ab;
 	padding: 0.5em;
@@ -310,16 +310,17 @@ ul.guessBox {
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	color: #fff;
-	overflow: auto;
+	overflow: hidden;
 }
 ul.guessBox li {
-	display: inline;
+	display: block;
 	background-color: #1a4e95;
 	padding: 0.3em;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-	width: 95%;
+	width: 9%;
+	float: left;
 	margin: 0.2em;
 	color: #fff;
 }
